--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-							 <img width="30" src="./dist/images/speech.png">
+							 <img width="30" src="./images/speech.png">
 								    
                             </a>
                         </h1>
@@ -46,7 +46,7 @@
 	                        <p class="hero-paragraph">This UCF CS Senior Design ’22 project is centered around the deployment of both a promotional website and a highlighted mobile application free for iOS & Android.</p>
 							<p class="'hero-paragraph">“FamilyChat” was design in Figma, developed using Expo, and is hosted through Firebase. The app was created with families in mind; pairing interactive features, alongside standard messaging functionality, for an improved group-chat experience.</p>
 	                        
-							<div class="hero-cta"><img width="180" src="dist/images/button_AppleAppStore.png" atl="Apple Coming Soon Button"><img width="180" src="dist/images/button_GooglePlayStore.png" atl="Google Coming Soon Button"></div>
+							<div class="hero-cta"><img width="180" src="./images/button_AppleAppStore.png" atl="Apple Coming Soon Button"><img width="180" src="./images/button_GooglePlayStore.png" atl="Google Coming Soon Button"></div>
 							<!-- <div class="hero-cta"><a class="button button-shadow" href="#">Learn more</a><a class="button button-primary button-shadow" href="#">Early access</a></div> -->
 						</div>
 						<div class="hero-app">
