--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								    </g>
 								</svg>
 							</div>
-							<img class="device-mockup" src="dist/images/iphone-mockup.png" alt="App preview">
+							<img class="device-mockup" src="./images/iphone-mockup.png" alt="App preview">
                             <div class="hero-app-dots hero-app-dots-1">
 								<svg width="124" height="75" xmlns="http://www.w3.org/2000/svg">
 								    <g fill="none" fill-rule="evenodd">
@@ -317,7 +317,7 @@
                 <div class="site-footer-inner has-top-divider">
                     <div class="brand footer-brand">
                         <a href="#">
-							<img width='30' src="dist/images/speech.png">
+							<img width='30' src="./images/speech.png">
                         </a>
                     </div>
                     <ul class="footer-links list-reset">
@@ -340,22 +340,22 @@
                     <ul class="footer-social-links list-reset">
                         <li>
                             <a href="#">
-                               <img width='30' src="dist/images/firebase.png">
+                               <img width='30' src="./images/firebase.png">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img width='30' src="dist/images/rn.png">
+                                <img width='30' src="./images/rn.png">
                             </a>
                         </li>
                         <li>
                             <a href="#">
-								<img width='30' src="dist/images/vsCode.png">
+								<img width='30' src="./images/vsCode.png">
                             </a>
                         </li>
 						<li>
                             <a href="#">
-								<img width='30' src="dist/images/figma.png">
+								<img width='30' src="./images/figma.png">
                             </a>
                         </li>
                     </ul>
