--- a/index.html
+++ b/index.html
@@ -12,13 +12,47 @@
 
 	<style>
 		a.gitHubButton {
-			width: 100;
-			height: 30;
-			color: whitesmoke;
+			width: 115;
+			height: 35;
+			/* color: whitesmoke; */
 			border-radius: 30;
 			border-style: solid;
+			/* margin: 15; */
 
 		}
+
+		.hero-cta {
+			flex-direction: row;
+			justify-content: center;
+			display: inline-flex;
+
+
+
+		}
+
+		.apple {
+			margin-right: 20px;
+		}
+
+		.bullets {
+
+			align-items: center;
+			/* margin-bottom: 0; */
+			justify-content: center;
+
+
+		}
+
+		ul.bullets {
+			text-align: left;
+			margin-left: 120px;
+		}
+
+		/* .canvas {
+			flex-direction: column;
+			align-items: center;
+			/* justify-content: flex-start; */
+		} */
 	</style>
 </head>
 
@@ -45,6 +79,14 @@
 					<div class="hero-inner">
 						<div class="hero-copy">
 							<h1 class="hero-title mt-0">FamilyChat</h1>
+
+							<div class="hero-cta">
+								<img width="160" src="./images/button_AppleAppStore.png" atl="Apple Coming Soon Button"
+									class="apple">
+								<img width="160" src="./images/button_GooglePlayStore.png"
+									atl="Google Coming Soon Button" class="google">
+							</div>
+
 							<p class="hero-paragraph">This UCF CS Senior Design ’22 project is centered around the
 								deployment of both a promotional website and a highlighted mobile application free for
 								iOS & Android.</p>
@@ -53,10 +95,7 @@
 								features, alongside standard messaging functionality, for an improved group-chat
 								experience.</p>
 
-							<div class="hero-cta"><img width="180" src="./images/button_AppleAppStore.png"
-									atl="Apple Coming Soon Button"><img width="180"
-									src="./images/button_GooglePlayStore.png" atl="Google Coming Soon Button"></div>
-							<!-- <div class="hero-cta"><a class="button button-shadow" href="#">Learn more</a><a class="button button-primary button-shadow" href="#">Early access</a></div> -->
+
 						</div>
 						<div class="hero-app">
 							<div class="hero-app-illustration">
@@ -120,7 +159,7 @@
 									</g>
 								</svg>
 							</div>
-							<img class="device-mockup" src="./images/iphone-mockup.png" alt="App preview">
+							<img class="device-mockup" src="./images/iphone-mockup2.png" alt="App preview">
 							<div class="hero-app-dots hero-app-dots-1">
 								<svg width="124" height="75" xmlns="http://www.w3.org/2000/svg">
 									<g fill="none" fill-rule="evenodd">
@@ -161,106 +200,115 @@
 			<section class="features section">
 				<div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
-						<h2 class="section-title mt-0">About the App</h2>
-						<div class="features-wrap">
-							<div class="feature is-revealing">
-								<div class="feature-inner">
-									<div class="feature-icon">
-										<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
-													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-													<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
-												</linearGradient>
-												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-b">
-													<stop stop-color="#FDFFDA" offset="0%" />
-													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
-													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-												</linearGradient>
-											</defs>
-											<g fill="none" fill-rule="evenodd">
-												<path
-													d="M24 48H0V24C0 10.745 10.745 0 24 0h24v24c0 13.255-10.745 24-24 24"
-													fill="url(#feature-1-a)" />
-												<path
-													d="M40 64H16V40c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24"
-													fill="url(#feature-1-b)" />
-											</g>
-										</svg>
+						<h2 class="section-title mt-0">About the App:/h2>
+							<div class="features-wrap">
+								<div class="feature is-revealing">
+									<div class="feature-inner">
+										<div class="feature-icon">
+											<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+												<defs>
+													<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
+														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+														<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
+													</linearGradient>
+													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
+														id="feature-1-b">
+														<stop stop-color="#FDFFDA" offset="0%" />
+														<stop stop-color="#F97059" stop-opacity=".798"
+															offset="49.935%" />
+														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+													</linearGradient>
+												</defs>
+												<g fill="none" fill-rule="evenodd">
+													<path
+														d="M24 48H0V24C0 10.745 10.745 0 24 0h24v24c0 13.255-10.745 24-24 24"
+														fill="url(#feature-1-a)" />
+													<path
+														d="M40 64H16V40c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24"
+														fill="url(#feature-1-b)" />
+												</g>
+											</svg>
+										</div>
+										<h3 class="feature-title mt-24">Topics</h3>
+										<p class="text-sm mb-0">From cluttered to organized topic conversations where
+											you
+											can always pick up from where you left off.</p>
 									</div>
-									<h3 class="feature-title mt-24">Topics</h3>
-									<p class="text-sm mb-0">From cluttered to organized topic conversations where you
-										can always pick up from where you left off.</p>
 								</div>
-							</div>
-							<div class="feature is-revealing">
-								<div class="feature-inner">
-									<div class="feature-icon">
-										<svg width="68" height="64" xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-2-a">
-													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-													<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
-												</linearGradient>
-												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-2-b">
-													<stop stop-color="#FDFFDA" offset="0%" />
-													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
-													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-												</linearGradient>
-											</defs>
-											<g fill="none" fill-rule="evenodd">
-												<path
-													d="M9.941 63.941v-24c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24h-24z"
-													fill="url(#feature-2-a)" transform="rotate(45 33.941 39.941)" />
-												<path
-													d="M16 0v24c0 13.255 10.745 24 24 24h24V24C64 10.745 53.255 0 40 0H16z"
-													fill="url(#feature-2-b)" />
-											</g>
-										</svg>
+								<div class="feature is-revealing">
+									<div class="feature-inner">
+										<div class="feature-icon">
+											<svg width="68" height="64" xmlns="http://www.w3.org/2000/svg">
+												<defs>
+													<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-2-a">
+														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+														<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
+													</linearGradient>
+													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
+														id="feature-2-b">
+														<stop stop-color="#FDFFDA" offset="0%" />
+														<stop stop-color="#F97059" stop-opacity=".798"
+															offset="49.935%" />
+														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+													</linearGradient>
+												</defs>
+												<g fill="none" fill-rule="evenodd">
+													<path
+														d="M9.941 63.941v-24c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24h-24z"
+														fill="url(#feature-2-a)" transform="rotate(45 33.941 39.941)" />
+													<path
+														d="M16 0v24c0 13.255 10.745 24 24 24h24V24C64 10.745 53.255 0 40 0H16z"
+														fill="url(#feature-2-b)" />
+												</g>
+											</svg>
+										</div>
+										<h3 class="feature-title mt-24">Friendly UX</h3>
+										<p class="text-sm mb-0"> Seemless design that allows you to use the applcation
+											without and hassle!</p>
 									</div>
-									<h3 class="feature-title mt-24">Friendly UX</h3>
-									<p class="text-sm mb-0"> Seemless design that allows you to use the applcation
-										without and hassle!</p>
 								</div>
-							</div>
-							<div class="feature is-revealing">
-								<div class="feature-inner">
-									<div class="feature-icon">
-										<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
-											<defs>
-												<linearGradient x1="50%" y1="100%" x2="50%" y2="43.901%"
-													id="feature-3-a">
-													<stop stop-color="#F97059" stop-opacity=".798" offset="0%" />
-													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-												</linearGradient>
-												<linearGradient x1="58.893%" y1="100%" x2="58.893%" y2="18.531%"
-													id="feature-3-b">
-													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-													<stop stop-color="#47A1F9" stop-opacity="0" offset="100%" />
-												</linearGradient>
-												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-3-c">
-													<stop stop-color="#FDFFDA" offset="0%" />
-													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
-													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-												</linearGradient>
-											</defs>
-											<g fill="none" fill-rule="evenodd">
-												<path fill="url(#feature-3-a)" opacity=".32" d="M0 24h64v40H0z" />
-												<path fill="url(#feature-3-b)" d="M40 24H24L0 64h64z" />
-												<path
-													d="M10 10v22c0 12.15 9.85 22 22 22h22V32c0-12.15-9.85-22-22-22H10z"
-													fill="url(#feature-3-c)" transform="rotate(45 32 32)" />
-											</g>
-										</svg>
+								<div class="feature is-revealing">
+									<div class="feature-inner">
+										<div class="feature-icon">
+											<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+												<defs>
+													<linearGradient x1="50%" y1="100%" x2="50%" y2="43.901%"
+														id="feature-3-a">
+														<stop stop-color="#F97059" stop-opacity=".798" offset="0%" />
+														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+													</linearGradient>
+													<linearGradient x1="58.893%" y1="100%" x2="58.893%" y2="18.531%"
+														id="feature-3-b">
+														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+														<stop stop-color="#47A1F9" stop-opacity="0" offset="100%" />
+													</linearGradient>
+													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
+														id="feature-3-c">
+														<stop stop-color="#FDFFDA" offset="0%" />
+														<stop stop-color="#F97059" stop-opacity=".798"
+															offset="49.935%" />
+														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+													</linearGradient>
+												</defs>
+												<g fill="none" fill-rule="evenodd">
+													<path fill="url(#feature-3-a)" opacity=".32" d="M0 24h64v40H0z" />
+													<path fill="url(#feature-3-b)" d="M40 24H24L0 64h64z" />
+													<path
+														d="M10 10v22c0 12.15 9.85 22 22 22h22V32c0-12.15-9.85-22-22-22H10z"
+														fill="url(#feature-3-c)" transform="rotate(45 32 32)" />
+												</g>
+											</svg>
+										</div>
+										<h3 class="feature-title mt-24">Interactive Features</h3>
+										<p class="text-sm mb-0"> Set up important event, decide on multiple options, and
+											pin
+											important content to ensure your whole group chat stays up to date and not
+											miss
+											a thing! </p>
 									</div>
-									<h3 class="feature-title mt-24">Interactive Features</h3>
-									<p class="text-sm mb-0"> Set up important event, decide on multiple options, and pin
-										important content to ensure your whole group chat stays up to date and not miss
-										a thing! </p>
 								</div>
-							</div>
 
-						</div>
+							</div>
 					</div>
 				</div>
 			</section>
@@ -269,10 +317,12 @@
 				<div class="container-sm">
 					<div class="media-inner section-inner">
 						<div class="media-header text-center">
-							<h2 class="section-title mt-0">STEM Day</h2>
-							<p class="section-paragraph mb-0">Here are some links to learn more about Computer Science.
+							<h2 class="section-title mt-0">STEM Day:</h2>
+							<p class="section-paragraph mb-0">Below are some links to additional resources, for you to
+								learn more about Computer Science at a beginner level.
 							</p>
-							<ul style="list-style: none;">
+
+							<ul class="bullets" style="text-align:left;">
 
 								<li><a
 										href="https://education.roblox.com/en-us/resources/intro-to-game-design-and-coding">Roblox:
@@ -284,15 +334,20 @@
 										Academy</a></li>
 								<li><a href="https://thekidshouldseethis.com/post/how-exactly-does-binary-code-work">Learn
 										Binary</a></li>
-								<li><a href="https://www.tutorialspoint.com/javascript/javascript_tutorial.pdf"> Learn
+								<li><a href="https://www.tutorialspoint.com/javascript/javascript_tutorial.pdf">
+										Learn
 										JavaScript</a></li>
-								<li><a href="https://www.tutorialspoint.com/objective_c/objective_c_tutorial.pdf"> Learn
+								<li><a href="https://www.tutorialspoint.com/objective_c/objective_c_tutorial.pdf">
+										Learn
 										Objective-C</a></li>
 
 							</ul>
+
 						</div>
-						<div class="media-canvas">
-							<svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
+						<div class="canvas">
+
+							<img width="300" src="./images/binaryASCII.png" atl="atoi chart" style="margin-left: 100px;">
+							<!-- <svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
 								<defs>
 									<linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="media-canvas">
 										<stop stop-color="#06101F" offset="0%" />
@@ -300,38 +355,10 @@
 									</linearGradient>
 								</defs>
 								<rect width="800" height="450" rx="8" fill="url(#media-canvas)" fill-rule="evenodd" />
-							</svg>
-							<div class="media-control">
-								<svg width="96" height="96" viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg">
-									<defs>
-										<linearGradient x1="87.565%" y1="15.873%" x2="17.086%" y2="80.538%"
-											id="media-control">
-											<stop stop-color="#FFF" stop-opacity=".64" offset="0%" />
-											<stop stop-color="#FFF" offset="100%" />
-										</linearGradient>
-										<filter x="-500%" y="-500%" width="1000%" height="1000%"
-											filterUnits="objectBoundingBox" id="media-shadow">
-											<feOffset dy="16" in="SourceAlpha" result="shadowOffsetOuter"></feOffset>
-											<feGaussianBlur stdDeviation="24" in="shadowOffsetOuter"
-												result="shadowBlurOuter"></feGaussianBlur>
-											<feColorMatrix
-												values="0 0 0 0 0.024 0 0 0 0 0.064 0 0 0 0 0.12 0 0 0 0.24 0"
-												in="shadowBlurOuter"></feColorMatrix>
-										</filter>
-									</defs>
-									<g fill="none" fill-rule="evenodd">
-										<circle fill="#FFF" cx="48" cy="48" r="48"
-											style="mix-blend-mode:multiply;filter:url(#media-shadow)" />
-										<circle fill="url(#media-control)" cx="48" cy="48" r="48" />
-										<path
-											d="M44.6 39.2a1.001 1.001 0 0 0-1.6.8v18a1.001 1.001 0 0 0 1.6.8l12-9a.998.998 0 0 0 0-1.6l-12-9z"
-											fill="#1D304B" />
-									</g>
-								</svg>
-							</div>
+							</svg> -->
+
 						</div>
 					</div>
-				</div>
 			</section>
 
 			<section class="newsletter section">
@@ -339,8 +366,9 @@
 					<div class="newsletter-inner section-inner">
 						<div class="newsletter-header text-center">
 							<h2 class="section-title mt-0">Created By:</h2>
-							<p class="section-paragraph">UCF Senior Design '22 Group 48</p>
-							<ul style="list-style: none;">
+							<p class="section-paragraph">[ UCF Senior Design '22 Group 48 ]</p>
+
+							<ul class="bullets">
 								<li>Evan C. Navarro
 									<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
 									<a src="https://github.com/EvanCNavarro">GitHub]</a>
@@ -366,6 +394,7 @@
 							</ul>
 
 
+
 							<button class="gitHubButton">
 								<a href="https://github.com/UCF-SD-Group-48">Check Out Our Github!</a>
 							</button>
@@ -378,11 +407,7 @@
 		<footer class="site-footer">
 			<div class="container">
 				<div class="site-footer-inner has-top-divider">
-					<div class="brand footer-brand">
-						<a href="#">
-							<img width='30' src="./images/speech.png">
-						</a>
-					</div>
+
 					<ul class="footer-links list-reset">
 						<li>
 							<a href="#">Privacy Policy</a>
@@ -393,12 +418,6 @@
 						<li>
 							<a href="#">FAQ's</a>
 						</li>
-						<li>
-							<a href="#">Apple App Store</a>
-						</li>
-						<li>
-							<a href="#">Google Play Store</a>
-						</li>
 					</ul>
 					<ul class="footer-social-links list-reset">
 						<li>
@@ -408,7 +427,7 @@
 						</li>
 						<li>
 							<a href="#">
-								<img width='30' src="./images/rn.png">
+								<img width='40' src="./images/rn.png">
 							</a>
 						</li>
 						<li>
@@ -422,7 +441,7 @@
 							</a>
 						</li>
 					</ul>
-					<div class="footer-copyright">&copy; 2022 FamilyChat ○ All Rights Reserved</div>
+					<div class="footer-copyright">&copy; 2022 FamilyChat — All Rights Reserved.</div>
 				</div>
 			</div>
 		</footer>
