--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			<section class="features section">
 				<div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
-						<h2 class="section-title mt-0">About the App:/h2>
+						<h2 class="section-title mt-0">About the App:</h2>
 							<div class="features-wrap">
 								<div class="feature is-revealing">
 									<div class="feature-inner">
