--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		ul.bullets {
 			text-align: left;
-			margin-left: 90px;
+			margin-left: 30px;
 		}
 		
 	</style>
@@ -341,7 +341,7 @@
 						</div>
 						<div class="canvas">
 
-							<img width="300" src="./images/binaryASCII.png" atl="atoi chart" style="margin-left: 80px;">
+							<img width="300" src="./images/binaryASCII.png" atl="atoi chart">
 							<!-- <svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
 								<defs>
 									<linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="media-canvas">
