--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 			text-align: left;
 			/* margin-left: 30px; */
 		}
+
+		names{
+			font-size: 10px;
+		}
 		
 	</style>
 </head>
@@ -317,7 +321,7 @@
 								learn more about Computer Science at a beginner level.
 							</p>
 
-							<ul class="bullets" style="text-align:left;">
+							<ul class="feature-title mt-24" style="text-align:left;">
 
 								<li><a
 										href="https://education.roblox.com/en-us/resources/intro-to-game-design-and-coding">Roblox:
@@ -363,7 +367,7 @@
 							<h2 class="section-title mt-0">Created By:</h2>
 							<p class="section-paragraph">[ UCF Senior Design '22 Group 48 ]</p>
 
-							<ul class="bullets">
+							<ul class="bullets names">
 								<li>Evan C. Navarro
 									<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
 									<a src="https://github.com/EvanCNavarro">GitHub]</a>
