--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
 			/* margin-left: 30px; */
 		}
 
-		names{
+		names {
 			font-size: 10px;
 		}
-		
 	</style>
 </head>
 
@@ -200,114 +199,108 @@
 				<div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
 						<h2 class="section-title mt-0">About the App:</h2>
-							<div class="features-wrap">
-								<div class="feature is-revealing">
-									<div class="feature-inner">
-										<div class="feature-icon">
-											<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
-												<defs>
-													<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
-														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-														<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
-													</linearGradient>
-													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
-														id="feature-1-b">
-														<stop stop-color="#FDFFDA" offset="0%" />
-														<stop stop-color="#F97059" stop-opacity=".798"
-															offset="49.935%" />
-														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-													</linearGradient>
-												</defs>
-												<g fill="none" fill-rule="evenodd">
-													<path
-														d="M24 48H0V24C0 10.745 10.745 0 24 0h24v24c0 13.255-10.745 24-24 24"
-														fill="url(#feature-1-a)" />
-													<path
-														d="M40 64H16V40c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24"
-														fill="url(#feature-1-b)" />
-												</g>
-											</svg>
-										</div>
-										<h3 class="feature-title mt-24">Topics</h3>
-										<p class="text-sm mb-0">From cluttered to organized topic conversations where
-											you
-											can always pick up from where you left off.</p>
+						<div class="features-wrap">
+							<div class="feature is-revealing">
+								<div class="feature-inner">
+									<div class="feature-icon">
+										<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+											<defs>
+												<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
+													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+													<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
+												</linearGradient>
+												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-b">
+													<stop stop-color="#FDFFDA" offset="0%" />
+													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
+													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+												</linearGradient>
+											</defs>
+											<g fill="none" fill-rule="evenodd">
+												<path
+													d="M24 48H0V24C0 10.745 10.745 0 24 0h24v24c0 13.255-10.745 24-24 24"
+													fill="url(#feature-1-a)" />
+												<path
+													d="M40 64H16V40c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24"
+													fill="url(#feature-1-b)" />
+											</g>
+										</svg>
 									</div>
+									<h3 class="feature-title mt-24">Topics</h3>
+									<p class="text-sm mb-0">From cluttered to organized topic conversations where
+										you
+										can always pick up from where you left off.</p>
 								</div>
-								<div class="feature is-revealing">
-									<div class="feature-inner">
-										<div class="feature-icon">
-											<svg width="68" height="64" xmlns="http://www.w3.org/2000/svg">
-												<defs>
-													<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-2-a">
-														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-														<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
-													</linearGradient>
-													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
-														id="feature-2-b">
-														<stop stop-color="#FDFFDA" offset="0%" />
-														<stop stop-color="#F97059" stop-opacity=".798"
-															offset="49.935%" />
-														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-													</linearGradient>
-												</defs>
-												<g fill="none" fill-rule="evenodd">
-													<path
-														d="M9.941 63.941v-24c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24h-24z"
-														fill="url(#feature-2-a)" transform="rotate(45 33.941 39.941)" />
-													<path
-														d="M16 0v24c0 13.255 10.745 24 24 24h24V24C64 10.745 53.255 0 40 0H16z"
-														fill="url(#feature-2-b)" />
-												</g>
-											</svg>
-										</div>
-										<h3 class="feature-title mt-24">Friendly UX</h3>
-										<p class="text-sm mb-0"> Seemless design that allows you to use the applcation
-											without and hassle!</p>
-									</div>
-								</div>
-								<div class="feature is-revealing">
-									<div class="feature-inner">
-										<div class="feature-icon">
-											<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
-												<defs>
-													<linearGradient x1="50%" y1="100%" x2="50%" y2="43.901%"
-														id="feature-3-a">
-														<stop stop-color="#F97059" stop-opacity=".798" offset="0%" />
-														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-													</linearGradient>
-													<linearGradient x1="58.893%" y1="100%" x2="58.893%" y2="18.531%"
-														id="feature-3-b">
-														<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
-														<stop stop-color="#47A1F9" stop-opacity="0" offset="100%" />
-													</linearGradient>
-													<linearGradient x1="50%" y1="100%" x2="50%" y2="0%"
-														id="feature-3-c">
-														<stop stop-color="#FDFFDA" offset="0%" />
-														<stop stop-color="#F97059" stop-opacity=".798"
-															offset="49.935%" />
-														<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
-													</linearGradient>
-												</defs>
-												<g fill="none" fill-rule="evenodd">
-													<path fill="url(#feature-3-a)" opacity=".32" d="M0 24h64v40H0z" />
-													<path fill="url(#feature-3-b)" d="M40 24H24L0 64h64z" />
-													<path
-														d="M10 10v22c0 12.15 9.85 22 22 22h22V32c0-12.15-9.85-22-22-22H10z"
-														fill="url(#feature-3-c)" transform="rotate(45 32 32)" />
-												</g>
-											</svg>
-										</div>
-										<h3 class="feature-title mt-24">Interactive Features</h3>
-										<p class="text-sm mb-0"> Set up important event, decide on multiple options, and
-											pin
-											important content to ensure your whole group chat stays up to date and not
-											miss
-											a thing! </p>
-									</div>
-								</div>
-
 							</div>
+							<div class="feature is-revealing">
+								<div class="feature-inner">
+									<div class="feature-icon">
+										<svg width="68" height="64" xmlns="http://www.w3.org/2000/svg">
+											<defs>
+												<linearGradient x1="0%" y1="100%" x2="50%" y2="0%" id="feature-2-a">
+													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+													<stop stop-color="#47A1F9" stop-opacity=".16" offset="100%" />
+												</linearGradient>
+												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-2-b">
+													<stop stop-color="#FDFFDA" offset="0%" />
+													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
+													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+												</linearGradient>
+											</defs>
+											<g fill="none" fill-rule="evenodd">
+												<path
+													d="M9.941 63.941v-24c0-13.255 10.745-24 24-24h24v24c0 13.255-10.745 24-24 24h-24z"
+													fill="url(#feature-2-a)" transform="rotate(45 33.941 39.941)" />
+												<path
+													d="M16 0v24c0 13.255 10.745 24 24 24h24V24C64 10.745 53.255 0 40 0H16z"
+													fill="url(#feature-2-b)" />
+											</g>
+										</svg>
+									</div>
+									<h3 class="feature-title mt-24">Friendly UX</h3>
+									<p class="text-sm mb-0"> Seemless design that allows you to use the applcation
+										without and hassle!</p>
+								</div>
+							</div>
+							<div class="feature is-revealing">
+								<div class="feature-inner">
+									<div class="feature-icon">
+										<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+											<defs>
+												<linearGradient x1="50%" y1="100%" x2="50%" y2="43.901%"
+													id="feature-3-a">
+													<stop stop-color="#F97059" stop-opacity=".798" offset="0%" />
+													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+												</linearGradient>
+												<linearGradient x1="58.893%" y1="100%" x2="58.893%" y2="18.531%"
+													id="feature-3-b">
+													<stop stop-color="#F9425F" stop-opacity=".8" offset="0%" />
+													<stop stop-color="#47A1F9" stop-opacity="0" offset="100%" />
+												</linearGradient>
+												<linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-3-c">
+													<stop stop-color="#FDFFDA" offset="0%" />
+													<stop stop-color="#F97059" stop-opacity=".798" offset="49.935%" />
+													<stop stop-color="#F9425F" stop-opacity="0" offset="100%" />
+												</linearGradient>
+											</defs>
+											<g fill="none" fill-rule="evenodd">
+												<path fill="url(#feature-3-a)" opacity=".32" d="M0 24h64v40H0z" />
+												<path fill="url(#feature-3-b)" d="M40 24H24L0 64h64z" />
+												<path
+													d="M10 10v22c0 12.15 9.85 22 22 22h22V32c0-12.15-9.85-22-22-22H10z"
+													fill="url(#feature-3-c)" transform="rotate(45 32 32)" />
+											</g>
+										</svg>
+									</div>
+									<h3 class="feature-title mt-24">Interactive Features</h3>
+									<p class="text-sm mb-0"> Set up important event, decide on multiple options, and
+										pin
+										important content to ensure your whole group chat stays up to date and not
+										miss
+										a thing! </p>
+								</div>
+							</div>
+
+						</div>
 					</div>
 				</div>
 			</section>
@@ -321,7 +314,8 @@
 								learn more about Computer Science at a beginner level.
 							</p>
 
-							<ul class="feature-title mt-24" style="text-align:left;">
+
+							<ul style="text-align:left;">
 
 								<li><a
 										href="https://education.roblox.com/en-us/resources/intro-to-game-design-and-coding">Roblox:
@@ -342,20 +336,11 @@
 
 							</ul>
 
+
+
 						</div>
 						<div class="canvas">
-
 							<img width="300" src="./images/binaryASCII.png" atl="atoi chart">
-							<!-- <svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
-								<defs>
-									<linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="media-canvas">
-										<stop stop-color="#06101F" offset="0%" />
-										<stop stop-color="#1D304B" offset="100%" />
-									</linearGradient>
-								</defs>
-								<rect width="800" height="450" rx="8" fill="url(#media-canvas)" fill-rule="evenodd" />
-							</svg> -->
-
 						</div>
 					</div>
 			</section>
@@ -367,31 +352,32 @@
 							<h2 class="section-title mt-0">Created By:</h2>
 							<p class="section-paragraph">[ UCF Senior Design '22 Group 48 ]</p>
 
-							<ul class="bullets names">
-								<li>Evan C. Navarro
-									<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
-									<a src="https://github.com/EvanCNavarro">GitHub]</a>
-								</li>
-								<li>Jacques Parizeau
-									<a src="https://www.linkedin.com/in/jjparizeau/">[LinkedIn /</a>
-									<a src="https://github.com/parizeaujj">GitHub]</a>
-									<a></a>
-								</li>
-								<li>Perdo Roman
-									<a src="https://www.linkedin.com/in/pedro-roman-profile/">[LinkedIn /</a>
-									<a src="https://github.com/proman655">GitHub]</a>
-								</li>
-								<li>Richard Morand
-									<a src="https://www.linkedin.com/in/richard-m-7a5235208/">[LinkedIn /</a>
-									<a src="https://github.com/MorandR">GitHub]</a>
-								</li>
-								<li>Tu Le
-									<a src="https://www.linkedin.com/in/connect-tu-le/">[LinkedIn /</a>
-									<a src="https://github.com/tule1102">GitHub]</a>
-								</li>
+							<div class="features-inner section-inner has-bottom-divider">
+								<ul class="bullets names">
+									<li>Evan C. Navarro
+										<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
+										<a src="https://github.com/EvanCNavarro">GitHub]</a>
+									</li>
+									<li>Jacques Parizeau
+										<a src="https://www.linkedin.com/in/jjparizeau/">[LinkedIn /</a>
+										<a src="https://github.com/parizeaujj">GitHub]</a>
+										<a></a>
+									</li>
+									<li>Perdo Roman
+										<a src="https://www.linkedin.com/in/pedro-roman-profile/">[LinkedIn /</a>
+										<a src="https://github.com/proman655">GitHub]</a>
+									</li>
+									<li>Richard Morand
+										<a src="https://www.linkedin.com/in/richard-m-7a5235208/">[LinkedIn /</a>
+										<a src="https://github.com/MorandR">GitHub]</a>
+									</li>
+									<li>Tu Le
+										<a src="https://www.linkedin.com/in/connect-tu-le/">[LinkedIn /</a>
+										<a src="https://github.com/tule1102">GitHub]</a>
+									</li>
 
-							</ul>
-
+								</ul>
+							</div>
 
 
 							<button class="gitHubButton">
