--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
 			<section class="newsletter section">
 				<div class="container-sm">
 					<div class="newsletter-inner section-inner">
-						<div class="newsletter-header text-center">
+						<!-- <div class="newsletter-header text-center"> -->
 							<h2 class="section-title mt-0">Created By:</h2>
 							<p class="section-paragraph">[ UCF Senior Design '22 Group 48 ]</p>
 
-							<div class="features-inner section-inner has-bottom-divider">
+							<div class="fsection-title mt-0">
 								<ul class="bullets names">
 									<li>Evan C. Navarro
 										<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
@@ -384,7 +384,7 @@
 								<a href="https://github.com/UCF-SD-Group-48">Check Out Our Github!</a>
 							</button>
 
-						</div>
+						<!-- </div> -->
 					</div>
 			</section>
 		</main>
