--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			position: relative;
 			display:inline-block;
 			flex-direction: column;
-			transform: translateX(50%);
+			margin: 1em
 			
 		}
 	</style>
