--- a/terms.html
+++ b/terms.html
@@ -55,7 +55,7 @@
 <body>
     
 
-    <button onclick="topFunction()" class="arrow" id="myBtn" title="Go to top"></button>
+    <button onclick="topFunction()"  id="myBtn" title="Go to top">^</button>
 
 
     <div class="body wrap" id="sec">
